# batocera-controlcenter

./: .gitignore  DocViewer.py  PdfViewer.py  README.md  controlcenter.py  controlcenter.xml  gamepads.py  pyproject.toml  refresh.py  shell.py  style.css  ui_core.py  xml_utils.py
src/batocera_controlcenter/: controlcenter.py  doc_viewer.py  gamepads.py  log.py  refresh.py  ui_core.py  xml_utils.py
src/batocera_controlcenter/data/: style.css
